# training-time-domain-authorization

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
experiments/: train_viggo.sh
scripts/: train_law.py
training_time_domain_authorization/: arguments.py  device.py  training.py
training_time_domain_authorization/datasets/: __init__.py  datasets.py  fin.py  gem.py  law.py  med.py
training_time_domain_authorization/losses/: causal_language_modeling_loss.py
