[tool.poetry]
name = "training-time-domain-authorization"
version = "0.1.0"
description = ""
authors = ["Domenic Rosati <domenicrosati@gmail.com>"]
readme = "README.md"
packages = [{include = "training_time_domain_authorization"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.2.2"
transformers = "^4.42.3"
datasets = "^2.20.0"
loguru = "^0.7.2"
gem-metrics = {git = "https://github.com/GEM-benchmark/GEM-metrics.git"}
accelerate = "^0.32.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"